--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@roziscoding/grammy-autoquote": "^2.0.8",
     "@zoralabs/coins-sdk": "^0.0.3",
     "dotenv": "^16.4.7",
-    "grammy": "^1.35.1"
+    "grammy": "^1.35.1",
+    "viem": "^2.25.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
