added: express server

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@roziscoding/grammy-autoquote": "^2.0.8",
     "@zoralabs/coins-sdk": "^0.0.3",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "grammy": "^1.35.1",
     "viem": "^2.25.0"
   },
